--- a/custom_components/eyeonsaur/manifest.json
+++ b/custom_components/eyeonsaur/manifest.json
@@ -13,9 +13,7 @@
 		"eyeonsaur"
 	],
 	"quality_scale": "bronze",
-	"requirements": [
-		"saur_client@git+https://github.com/cekage/Saur_fr_client.git@0.2.8"
-	],
+	"requirements": ["saur_client==0.2.9"],
 	"single_config_entry": true,
-	"version": "1.1.7"
+	"version": "1.1.8"
 }
