--- a/custom_components/eyeonsaur/manifest.json
+++ b/custom_components/eyeonsaur/manifest.json
@@ -13,7 +13,7 @@
 		"eyeonsaur"
 	],
 	"quality_scale": "bronze",
-	"requirements": ["saur_client==0.3.2"],
+	"requirements": ["saur_client>=0.3.3,<0.4.0"],
 	"single_config_entry": true,
-	"version": "1.1.10"
+	"version": "1.1.11"
 }
